@@ -77,14 +77,6 @@
 					<a href="#profile#Chakrygin">@Chakrygin</a>,
 					<a href="#profile#coloristka">@coloristka</a>
 				</p>
-
-				<hr />
-
-				<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_blank">
-					<input type="hidden" name="cmd" value="_s-xclick">
-					<input type="hidden" name="hosted_button_id" value="9EMWGPTMYTZXS">
-					<input type="submit" id="donate" value="" />
-				</form>
 			</div>
 		</div>
 
