@@ -4,6 +4,7 @@ In development:
 	+ Displaying the tweet time (optional)
 	+ Displaying the user Twitter client in tweet (optional)
 	+ Settings button on the first page
+	- Donate button is removed
 
 0.16:
 	* Fix for the urls without protocol (thanks @Stammru)
